# Recommendation-System

./: .env.example  .gitignore  README.md  airflow.Dockerfile  backend.Dockerfile  deploy.sh  docker-compose.yml  init-clickhouse.sql  init-db.sql  init-greenplum.sql  pyproject.toml  test.txt  tests.Dockerfile  wait_for_services.sh
.github/workflows/: pipeline.yml
airflow/dags/: dag.py  load_books.py
airflow/dags/lib/: ch_connect.py  csv_book_loader.py  pg_connect.py
airflow/dags/tables/: book_loader.py  bookgenre_loader.py  booktag_loader.py  booktype_loader.py  completed_loader.py  genre_loader.py  message_loader.py  planned_loader.py  reading_loader.py  score_loader.py  tag_loader.py  type_loader.py  user_loader.py
dags/: dag.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
openlibrary_scraper/: parser.py
parse/: books.csv
scraper/: books.csv  launch_parser.py  openlibrary_parser.py  parse.py  parser.py
src/: config.py  constants.py  middlewares.py
src/frontend/: index.html
src/frontend/css/: mobile.css  style.css
src/frontend/html/: base.html  book_info.html  catalog.html  index.html  not_found.html  personal_account.html  registration.html  search_results.html  signin.html
src/frontend/js/: books.js  catalogFilter.js  count_stars.js  feedback.js  filtering.js  generateLinks.js  main.js  navbut.js  search.js  update_form.js
src/microservices/: recommendation_system_project.py
src/routers/: feedback.py  main.py  scoring.py
src/scripts/: auth.py  book.py  book_list.py  book_messages.py  book_stats.py  ch_connect.py  check_auth.py  exceptions.py  message.py  pg_connect.py  score.py  search.py  status.py  user.py  user_list.py  user_stats.py
src/scripts/ml_module/: for_Denis_RNN1.ipynb  for_Denis__BERT.ipynb  for_Denis_basic.ipynb  for_denis__bert.py  for_denis_basic.py  (+4 more)
tests/: tests.py  unit_test.py
(+3 files in other folders)
