[project]
name = "recommendation-system-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Abraham14711",email = "pet_zed@rambler.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0" 
dependencies = [
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "ldap3 (>=2.9.1)",
    "python-dotenv (>=1.1.1)",
    "python-keycloak (>=5.6.0,<6.0.0) ; python_version < '4.0'",
    "psycopg2 (>=2.9.10,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"